[package]
name = "libfixers"
version = "0.1.0"
authors = ["kernelmethod <17100608+kernelmethod@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive-try-from-primitive = "1"
nom = "6"
serde = { version = "1.0", features = ["derive"] }
